<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageButton
        android:id="@+id/img_btn_close"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="end"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="@string/cancel"
        android:src="@drawable/ic_baseline_close_24"
        app:layout_constraintBottom_toTopOf="@id/txt_ui_mode_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:tint="@color/colorPrimaryDark"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/txt_ui_mode_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:text="@string/ui_mode"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/r_grp_mode_night"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_btn_close"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="TextContrastCheck" />

    <RadioGroup
        android:id="@+id/r_grp_mode_night"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_ui_mode_title">

        <RadioButton
            android:id="@+id/r_btn_mode_night_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/light"
            android:textColor="@color/color_text"
            android:textSize="@dimen/default_text_size"
            android:theme="@style/AppCheckBoxAndRadioButtonAndSwitch" />

        <RadioButton
            android:id="@+id/r_btn_mode_night_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dark"
            android:textColor="@color/color_text"
            android:textSize="@dimen/default_text_size"
            android:theme="@style/AppCheckBoxAndRadioButtonAndSwitch" />

        <RadioButton
            android:id="@+id/r_btn_mode_night_system_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/system_default"
            android:textColor="@color/color_text"
            android:textSize="@dimen/default_text_size"
            android:theme="@style/AppCheckBoxAndRadioButtonAndSwitch" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>