<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?colorPrimaryDark"
    android:padding="@dimen/screen_margin"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:contentDescription="@string/image_logo"
        android:padding="8dp"
        android:src="@drawable/my_money_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/txt_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="@color/color_text"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="1"
        android:text="@string/app_name"
        android:textColor="@color/yellow_logo"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_logo"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/txt_app_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/black_10"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_app_name"
        tools:text="@string/version" />

    <TextView
        android:id="@+id/txt_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_app_version"
        tools:text="@string/hint_email" />

    <View
        android:id="@+id/view_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="#29FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_email" />

    <TextView
        android:id="@+id/txt_rate_the_app"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_bkg_progress_bar_circular"
        android:drawableTint="@color/white"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/rate_the_app"
        android:textColor="@color/white"
        android:textSize="@dimen/default_text_size"
        app:drawableEndCompat="@drawable/ic_baseline_star_24"
        app:drawableStartCompat="@drawable/ic_baseline_thumb_up_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_divider"
        tools:ignore="UnusedAttribute,UseCompatTextViewDrawableXml" />

    <TextView
        android:id="@+id/txt_know_pro_version"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_bkg_progress_bar_circular"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/know_the_pro_version"
        android:textColor="@color/white"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_rate_the_app"
        tools:ignore="UnusedAttribute" />

</androidx.constraintlayout.widget.ConstraintLayout>