<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_screen_background"
    android:orientation="vertical"
    android:padding="@dimen/screen_margin"
    tools:context=".view.login.dialog.TermsAndConditionsDialog">

    <ImageButton
        android:id="@+id/img_btn_close"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="end"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="@string/close"
        android:src="@drawable/ic_baseline_close_24"
        android:tooltipText="@string/close"
        app:tint="@color/colorPrimaryDark"
        tools:ignore="ImageContrastCheck"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/txt_terms_and_conditions_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/terms_and_conditions_title"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck" />

    <View
        android:id="@+id/divider_top"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/black_10" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/txt_terms_and_conditions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:text="@string/terms_and_conditions_text"
            android:textColor="@color/color_text"
            android:textColorLink="@color/colorPrimary"
            android:textSize="@dimen/default_text_size"
            tools:ignore="TextContrastCheck" />

    </ScrollView>

    <View
        android:id="@+id/divider_bottom"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="16dp"
        android:background="@color/black_10" />

    <Button
        android:id="@+id/btn_accept_terms_and_conditions"
        style="@style/AppButton"
        android:layout_width="match_parent"
        android:text="@string/i_accept_the_terms_and_conditions"
        android:textSize="14sp"
        tools:ignore="TextContrastCheck" />

</LinearLayout>