<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_screen_background"
    android:paddingStart="@dimen/form_side_margin"
    android:paddingTop="@dimen/screen_margin"
    android:paddingEnd="@dimen/form_side_margin"
    android:paddingBottom="@dimen/screen_margin"
    tools:context=".view.money.activity.file.generator.GenerateFileActivity">

    <TextView
        android:id="@+id/txt_year_month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/color_text"
        android:textSize="@dimen/default_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextContrastCheck"
        tools:text="2022 July" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/in_file_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/file_name"
        app:errorEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_year_month"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_file_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:textSize="@dimen/default_text_size"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txt_file_extension"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/file_extension"
        android:textColor="@color/color_text"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/in_file_name"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextContrastCheck" />

    <RadioGroup
        android:id="@+id/r_grp_file_extension"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_file_extension"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/r_btn_csv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/csv"
            android:textColor="@color/color_text"
            android:textSize="@dimen/default_text_size"
            android:theme="@style/AppCheckBoxAndRadioButtonAndSwitch" />

        <RadioButton
            android:id="@+id/r_btn_pdf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pdf"
            android:textColor="@color/color_text"
            android:textSize="@dimen/default_text_size"
            android:theme="@style/AppCheckBoxAndRadioButtonAndSwitch" />

        <RadioButton
            android:id="@+id/r_btn_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txt"
            android:textColor="@color/color_text"
            android:textSize="@dimen/default_text_size"
            android:theme="@style/AppCheckBoxAndRadioButtonAndSwitch" />

        <RadioButton
            android:id="@+id/r_btn_xls"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/xls"
            android:textColor="@color/color_text"
            android:textSize="@dimen/default_text_size"
            android:theme="@style/AppCheckBoxAndRadioButtonAndSwitch" />

    </RadioGroup>

    <TextView
        android:id="@+id/txt_generating_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/generating_file"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/progress_loading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ProgressBar
        android:id="@+id/progress_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_bkg_progress_bar_circular"
        android:padding="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.widget.Button
        android:id="@+id/btn_cancel"
        style="@style/AppButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/background_button_cancel"
        android:text="@string/cancel"
        android:textColor="@color/color_text_button_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/r_grp_file_extension"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btn_save"
        style="@style/AppButton"
        android:layout_width="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:enabled="false"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_cancel"
        app:layout_constraintTop_toBottomOf="@id/r_grp_file_extension"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>